Lobby delete UI tweaks

--- a/templates/game.html
+++ b/templates/game.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 {% block head %}
 <style type="text/css">
-.word {
-  cursor: pointer;
-}
+.word { cursor: pointer; }
 </style>
 {% endblock %}
 {% block content %}
