--- a/templates/game.html
+++ b/templates/game.html
@@ -1,20 +1,29 @@
 {% extends 'base.html' %}
 {% block head %}
 <style type="text/css">
-.word { cursor: pointer; }
+a {
+  color: inherit;
+  text-decoration: none;
+}
+.clickable {
+  cursor: pointer;
+}
 </style>
 {% endblock %}
 {% block content %}
 {% raw %}
-<div v-cloak id="app">
+<div v-cloak id="game">
   <p>Current turn: {{ gameBundle.currentTeam }} {{ gameBundle.currentRole }}</p>
-  <board :data="gameBundle.deck" :size="boardSize"></board>
-  <br/><br/>
-  <board :data="map" :size="boardSize"></board>
+  <p>Current clue: {{ gameBundle.currentClue.word }}, {{ gameBundle.currentClue.number}}</p>
+  <board :data="gameBundle.deck" :enablewords="gameBundle.currentRole === 'Operative'" :size="boardSize"></board>
   <br></br>
-  <input type="text" placeholder="Enter clue word here"> </input>
-  <input type="text" placeholder="Enter number of guesses here"> </input>
-  <button v-on:click="sendClue"> Submit </button>
+  <div v-if="gameBundle.currentRole === 'Spymaster'">
+    <board :data="map" :size="boardSize"></board>
+    <br/><br/>
+    <input type="text" v-model="clueword" placeholder="Enter clue word here"> </input>
+    <input type="text" v-model="cluenumber" placeholder="Enter number of guesses here"> </input>
+    <button v-on:click="submitClue"> Submit </button>
+  </div>
 </div>
 {% endraw %}
 {% endblock %}
@@ -26,13 +35,18 @@
     <tbody>
       <tr v-for="row in boardData">
         <td v-for="col in row">
-          <span v-on:click="chooseWord(col.word)" class="word" v-bind:class="{
+          <span v-bind:class="{
             red: col.status === 'RED',
             blue: col.status === 'BLUE',
             neutral: col.status === 'NEUTRAL',
-            bomb: col.status === 'BOMB'
+            bomb: col.status === 'BOMB',
           }">
-            {{col.word}}
+            <a v-if="enablewords" v-on:click="chooseWord(col.word)" class="clickable">
+              {{col.word}}
+            </a>
+            <a v-else class="unclickable">
+              {{col.word}}
+            </a>
           </span>
         </td>
       </tr>
@@ -43,7 +57,11 @@
 <script src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/js.cookie.min.js') }}"></script>
 <script>
+  var COOKIE_ID = 'CN_ID';
+  var EVENT_CONNECT = {{ ClientEvent.CONNECT.value|tojson|safe }};
   var EVENT_CHOOSE_WORD = {{ GameEvent.CHOOSE_WORD.value|tojson|safe }};
+  var EVENT_SUBMIT_CLUE = {{ GameEvent.SUBMIT_CLUE.value|tojson|safe }};
+  var EVENT_UPDATE = {{ GameEvent.UPDATE.value|tojson|safe }};
   var serverUri = location.protocol+'//'+document.domain+':'+location.port;
   var socket = io.connect(serverUri);
 
@@ -64,10 +82,11 @@
     props: {
       data: Array,
       size: Number,
+      enablewords: Boolean,
     },
     computed: {
       boardData: function () {
-        var data = this.data;
+        var data = this.data.slice(0);
         var size = this.size;
         var rowSize = Math.sqrt(size);
         var boardData = [];
@@ -78,22 +97,39 @@
     methods: {
       chooseWord: function(word) {
         socket.emit(EVENT_CHOOSE_WORD, word);
+      },
+    }
+  });
+
+  var Game = new Vue({
+    el: '#game',
+    data: {
+      boardSize: Number(gameBundle.boardSize),
+      gameBundle: gameBundle,
+      map: map,
+      clueword: '',
+      cluenumber: '',
+    },
+    methods: {
+      submitClue: function() {
+        socket.emit(EVENT_SUBMIT_CLUE, {
+          word: this.clueword,
+          number: this.cluenumber
+        });
+        this.clueword = '';
+        this.cluenumber = '';
       }
     }
   });
 
-  var App = new Vue({
-    el: '#app',
-    data: {
-      boardSize: Number(gameBundle.boardSize),
-      gameBundle: gameBundle,
-      map: map
-    },
-    methods: {
-      sendClue: function(event) {
-        socket.emit('player turn')
-      }
-    }
+  // Handles the initial connection of the player
+  socket.on('connect', function() {
+    var cookie = Cookies.getJSON(COOKIE_ID);
+    socket.emit(EVENT_CONNECT, cookie);
+  });
+
+  socket.on(EVENT_UPDATE, function(gameBundle) {
+    Game.gameBundle = gameBundle;
   });
 </script>
 {% endblock %}
