Clean up the game UI a bit, lots to be done still

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
       [v-cloak] {
         display: none;
       }
+      nav {
+        height: 2.4em;
+      }
       .avatar {
         width: 2.5em;
         height: 2.5em;
@@ -27,7 +30,7 @@
         background-color: #ff4136;
       }
       .container {
-        padding-top: 4em;
+        padding-top: 3em;
         display: flex;
         justify-content: center; /* for horizontal alignment */
         align-items: center; /* for vertical alignment */
