verify clue is one word (no spaces)

--- a/templates/game.html
+++ b/templates/game.html
@@ -194,7 +194,9 @@ a {
     },
     methods: {
       validClue: function() {
-        return this.clueword !== '' && this.cluenumber !== '';
+         var nonEmpty = this.clueword !== '' && this.cluenumber !== '';
+         var oneWord = this.clueword.indexOf(' ') < 0;
+         return nonEmpty && oneWord;
       },
       canSubmit: function() {
         return this.isActive && this.validClue();
